WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297274
Forwarded logs are not sent to Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=297274
Summary
Forwarded logs are not sent to Web Inspector
Per Arne Vollan
Reported
2025-08-12 09:29:13 PDT
Forwarded logs are not sent to Web Inspector.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-12 09:29:25 PDT
<
rdar://problem/158138643
>
Per Arne Vollan
Comment 2
2025-08-12 09:36:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49276
EWS
Comment 3
2025-09-15 15:40:31 PDT
Committed
299987@main
(89c7c4940585): <
https://commits.webkit.org/299987@main
> Reviewed commits have been landed. Closing PR #49276 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug