Forwarded logs are not sent to Web Inspector https://bugs.webkit.org/show_bug.cgi?id=297274 rdar://158138643

Reviewed by NOBODY (OOPS!).

Forwarded logs should be sent to the Web Inspector console when the Develop menu is On.

* Source/WTF/wtf/Logger.h:
(WTF::Logger::developerExtrasEnabled const):
(WTF::Logger::setDeveloperExtrasEnabled):
(WTF::Logger::log):
* Source/WebCore/Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::didLogMessage):
* Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::createAnswerSucceeded):
(WebCore::PeerConnectionBackend::createOfferSucceeded):
* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::setLocalDescription):
(WebCore::RTCPeerConnection::setRemoteDescription):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::webInspectorLoggingEnabled):
* Source/WebCore/dom/Document.h:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType const):
(WebCore::HTMLMediaElement::setNetworkState):
(WebCore::HTMLMediaElement::canTransitionFromAutoplayToPlay const):
(WebCore::HTMLMediaElement::setReadyState):
(WebCore::HTMLMediaElement::addAudioTrack):
(WebCore::HTMLMediaElement::addVideoTrack):
(WebCore::HTMLMediaElement::removeAudioTrack):
(WebCore::HTMLMediaElement::configureTextTrackGroup):
(WebCore::HTMLMediaElement::mediaPlayerEngineUpdated):
(WebCore::HTMLMediaElement::mediaPlayerCharacteristicChanged):
(WebCore::HTMLMediaElement::configureTextTrackDisplay):
(WebCore::HTMLMediaElement::setAutoplayEventPlaybackState):
* Source/WebCore/page/PerformanceLogging.cpp:
(WebCore::PerformanceLogging::didReachPointOfInterest):
* Source/WebCore/page/PerformanceMonitor.cpp:
(WebCore::PerformanceMonitor::measureCPUUsageInActivityState):
* Source/WebCore/page/tmpstd_function_copy_example.cpp: Added.
(PageConsoleClient::setMessageHandler):
(PageConsoleClient::setMessageHandlerCopy):
(PageConsoleClient::addMessageToConsole):
(OptimizedPageConsoleClient::OptimizedPageConsoleClient):
(OptimizedPageConsoleClient::addMessageToConsole):
(exampleUsage):
* Source/WebCore/platform/LogMessages.in:
* Source/WebCore/platform/Logging.h:
* Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::WTF_REQUIRES_LOCK):
* Tools/TestWebKitAPI/Tests/WebCore/Logging.cpp:
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::doReleaseLogging):