Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp
@@ -39,10 +39,21 @@
 #include "VP9UtilitiesCocoa.h"
 #endif
 
+#if RELEASE_LOG_DISABLED
+#define PLATFORMMEDIASESSIONMANAGER_RELEASE_LOG(formatString, ...)
+#else
 #define PLATFORMMEDIASESSIONMANAGER_RELEASE_LOG(formatString, ...) \
-if (willLog(WTFLogLevel::Always)) { \
-    RELEASE_LOG_FORWARDABLE(Media, PLATFORMMEDIASESSIONMANAGER_##formatString, ##__VA_ARGS__); \
-} \
+do { \
+    if (willLog(WTFLogLevel::Always)) { \
+        RELEASE_LOG_FORWARDABLE(Media, PLATFORMMEDIASESSIONMANAGER_##formatString, ##__VA_ARGS__); \
+        if (logger().developerExtrasEnabled()) { \
+            char buffer[1024] = { 0 }; \
+            SAFE_SPRINTF(std::span { buffer }, MESSAGE_PLATFORMMEDIASESSIONMANAGER_##formatString, ##__VA_ARGS__); \
+            logger().toObservers(logChannel(), WTFLogLevel::Always, String::fromUTF8(buffer)); \
+        } \
+    } \
+} while (0)
+#endif
 
 namespace WebCore {
 
